rudy-db/tests/snapshots/introspect_enums-9.snap
---
source: rudy-db/tests/live_introspection.rs
expression: u8_third_value
---
Scalar {
    ty: "U8Enum::Third",
    value: "2",
}
