rudy-db/tests/snapshots/introspect_enums.snap
---
source: rudy-db/tests/live_introspection.rs
expression: unit_value
---
Scalar {
    ty: "TestEnum::Unit",
    value: "Unit",
}
