rudy-db/tests/snapshots/introspect_option-2.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
---
Scalar {
    ty: "Option<u32>",
    value: "None",
}
