rudy-db/tests/snapshots/introspect_smart_pointers-3.snap
---
source: rudy-db/tests/live_introspection.rs
expression: rc_value
---
Scalar {
    ty: "Rc<i32>",
    value: "42",
}
