rudy-db/tests/snapshots/introspect_smart_pointers-4.snap
---
source: rudy-db/tests/live_introspection.rs
expression: mutex_value
---
Scalar {
    ty: "Mutex<i32>",
    value: "42",
}
