rudy-db/tests/snapshots/introspect_smart_pointers-5.snap
---
source: rudy-db/tests/live_introspection.rs
expression: cell_value
---
Scalar {
    ty: "RefCell<i32>",
    value: "100",
}
