rudy-db/tests/snapshots/introspect_smart_pointers.snap
---
source: rudy-db/tests/live_introspection.rs
expression: box_value
---
Scalar {
    ty: "Box<String>",
    value: "\"Boxed string\"",
}
