rudy-db/tests/snapshots/introspect_string.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
---
Scalar {
    ty: "String",
    value: "\"Hello, Debugger!\"",
}
