rudy-db/tests/snapshots/introspect_struct.snap
---
source: rudy-db/tests/live_introspection.rs
expression: value
---
Struct {
    ty: "TestPerson",
    fields: {
        "age": Scalar {
            ty: "u32",
            value: "30",
        },
        "email": Scalar {
            ty: "Option<String>",
            value: "\"alice@example.com\"",
        },
        "name": Scalar {
            ty: "String",
            value: "\"Alice\"",
        },
    },
}
